; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/bmake/extr_main.c_getBoolean.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/bmake/extr_main.c_getBoolean.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"${%s:U:tl}\00", align 1
@VAR_GLOBAL = common dso_local global i32 0, align 4
@VARF_WANTRES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @getBoolean(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [64 x i8], align 16
  %6 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = getelementptr inbounds [64 x i8], [64 x i8]* %5, i64 0, i64 0
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @snprintf(i8* %7, i32 64, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8* %8)
  %10 = icmp slt i32 %9, 64
  br i1 %10, label %11, label %25

11:                                               ; preds = %2
  %12 = getelementptr inbounds [64 x i8], [64 x i8]* %5, i64 0, i64 0
  %13 = load i32, i32* @VAR_GLOBAL, align 4
  %14 = load i32, i32* @VARF_WANTRES, align 4
  %15 = call i8* @Var_Subst(i32* null, i8* %12, i32 %13, i32 %14)
  store i8* %15, i8** %6, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = icmp ne i8* %16, null
  br i1 %17, label %18, label %24

18:                                               ; preds = %11
  %19 = load i8*, i8** %6, align 8
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @s2Boolean(i8* %19, i32 %20)
  store i32 %21, i32* %4, align 4
  %22 = load i8*, i8** %6, align 8
  %23 = call i32 @free(i8* %22)
  br label %24

24:                                               ; preds = %18, %11
  br label %25

25:                                               ; preds = %24, %2
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*) #1

declare dso_local i8* @Var_Subst(i32*, i8*, i32, i32) #1

declare dso_local i32 @s2Boolean(i8*, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
